override handler.sample in server

--- a/views/sample.ejs
+++ b/views/sample.ejs
@@ -50,23 +50,16 @@
 
 
   <body>
-  <h1>Pedometer</h1>
+  <h1>Pedometer for <%= user %> </h1>
 
 
   <script type="text/javascript" src="ejs_production.js"></script>
 
   <script>
 
-
-   <script type="text/javascript" src="async.js"></script>
-   <script type="text/javascript">
-   <script type="text/javascript">
-   <script src="/Users/JennyHo/node-littleprinter-final/server.js "> 
-  </script>
-
   <script type="text/javascript"
-src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js">
-</script>
+  src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js">
+  </script>
 
   <table>
 
@@ -79,6 +72,8 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js">
     <%=obj.count%>
     <%
 
+
+    
 
     var data; 
 // Generate a random board for first time players
